argocd/applications/istio-ingress/external-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: knative-external-gateway
  namespace: istio-ingress
spec:
  selector:
    app: gateway
    istio: gateway
  servers:
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
        - "*"
    - port:
        number: 443
        protocol: HTTPS
        name: https
      tls:
        mode: PASSTHROUGH
      hosts:
        - "*"
